# RAGFromScratch

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_api.py  test_document.txt
TestingData/: Anthropic - Wikipedia.html
TestingData/Anthropic - Wikipedia_files/: load(1).php  load.php
ingestion/: __init__.py  chunker.py  loader.py  models.py
ingestion/parsers/: __init__.py
rag_pipeline/: config.py  conftest.py  models.py  requirements.txt
rag_pipeline/api/: __init__.py  app.py  schemas.py
rag_pipeline/generation/: __init__.py  llm_client.py  prompt_builder.py  query.py
rag_pipeline/ingestion/: __init__.py  chunker.py  loader.py  models.py  resolver.py
rag_pipeline/ingestion/parsers/: __init__.py  html_parser.py  text_parser.py
rag_pipeline/tests/: docker-compose.yml  test_api.py  test_chunker.py  test_embedder.py  test_end_to_end.py  test_llm_client.py  test_loader.py  test_pg_store.py  test_prompt_builder.py  test_query.py
rag_pipeline/tests/fixtures/: sample.html  sample.md  sample.txt  sample_long.txt
rag_pipeline/vectorstore/: __init__.py  embedder.py  models.py  pg_store.py
ragfromscratch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
