[project]
name = "ragfromscratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.13.3",
    "docling==2.93.0",
    "lxml==5.3.1",
    "nltk==3.9.1",
    "requests==2.32.3",
    "tiktoken==0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
]
