[project]
name = "ragfromscratch"
version = "0.1.0"
description = "Privacy-first, fully local RAG pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.13.3",
    "docling==2.93.0",
    "lxml==5.3.1",
    "nltk==3.9.1",
    "httpx>=0.27",
    "tiktoken==0.9.0",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-docker>=3.1",
]

[project.scripts]
rag = "main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "integration: requires external services (PostgreSQL via Docker, Ollama)",
]

[tool.setuptools.packages.find]
exclude = ["TestingData*"]